--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 folium==0.15.1
+numpy==1.26.4
 pandas==2.2.1
 Requests==2.31.0
-streamlit==1.32.1
+streamlit==1.31.1
 streamlit_folium==0.18.0
-~treamlit==1.31.1
